[package]
name = "greynoise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = { version = "2.1.0" }
ini = { version = "1.3.0" }
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.19.2", features = ["full"] }
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
